[package]
name = "newrelic"
description = """
Idiomatic Rust bindings to the New Relic C SDK.
"""
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
categories = ["api-bindings"]
edition = "2018"
repository = "https://github.com/sd2k/newrelic"
license = "MIT/Apache-2.0"

[dependencies]
derive_more = "0.14.0"
log = ">0.4.0"
newrelic-sys = "0.1"

[badges]
maintenance = { status = "passively-maintained" }
