[package]
name = "newrelic"
description = """
Idiomatic Rust bindings to the New Relic C SDK.

Note: versions 0.1.0 onwards of this crate are completely incompatible
with previous versions as they move away from the deprecated New Relic SDK
to the newer New Relic C SDK. This has additional requirements: see
https://docs.newrelic.com/docs/agents/c-sdk/get-started/introduction-c-sdk
for details.
"""
version = "0.2.2"
authors = ["Ben Sully <ben@bsull.io>"]
categories = ["api-bindings"]
edition = "2018"
repository = "https://github.com/sd2k/newrelic"
license = "MIT/Apache-2.0"

[dependencies]
log = ">0.4.0"
newrelic-sys = "0.2"
libc = { version="0.2", optional = true }
pin-project = { version="0.4", optional = true }

[dev-dependencies]
tokio = {version="0.2", features=["full"]}

[features]
default = []
distributed_tracing = ["libc"]
async = ["pin-project"]

[badges]
maintenance = { status = "passively-maintained" }
